--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@popperjs/core": "^2.11.6",
     "@splinetool/react-spline": "^2.2.3",
     "@splinetool/runtime": "^0.9.146",
-    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -20,6 +19,8 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "bootstrap": "^5.2.3",
+    "sass": "^1.56.1",
     "vite": "^3.2.3"
   }
 }
